# PythonWeb7

./: alembic.ini  connect_db.py  data_sql.db  hw7table.db  models.py  my_select.py  pyproject.toml  seeds.py
alembic/versions/: 5e647a765205_init.py
